kmm/manifests/kmm.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/component: kmm
    app.kubernetes.io/name: kmm
    app.kubernetes.io/part-of: kmm
    control-plane: controller
  name: kmm-operator-system
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kmm
    app.kubernetes.io/name: kmm
    app.kubernetes.io/part-of: kmm
    control-plane: controller
  name: kmm-operator-controller-metrics-service
  namespace: kmm-operator-system
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: kmm
    app.kubernetes.io/name: kmm
    app.kubernetes.io/part-of: kmm
    control-plane: controller
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kmm
    app.kubernetes.io/created-by: kernel-module-management
    app.kubernetes.io/instance: webhook-service
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: kmm
    app.kubernetes.io/part-of: kmm
  name: kmm-operator-webhook-service
  namespace: kmm-operator-system
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    app.kubernetes.io/component: kmm
    app.kubernetes.io/name: kmm
    app.kubernetes.io/part-of: kmm
    control-plane: webhook-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: kmm
    app.kubernetes.io/name: kmm
    app.kubernetes.io/part-of: kmm
    control-plane: controller
  name: kmm-operator-controller
  namespace: kmm-operator-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kmm
      app.kubernetes.io/name: kmm
      app.kubernetes.io/part-of: kmm
      control-plane: controller
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        app.kubernetes.io/component: kmm
        app.kubernetes.io/name: kmm
        app.kubernetes.io/part-of: kmm
        control-plane: controller
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: Exists
            weight: 1
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: Exists
            weight: 1
      containers:
      - args:
        - --config=kmm-operator-manager-config
        image: gcr.io/k8s-staging-kmm/kernel-module-management-operator:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 8443
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 384Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: kmm-operator-controller
      terminationGracePeriodSeconds: 10
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Equal
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Equal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: kmm
    app.kubernetes.io/name: kmm
    app.kubernetes.io/part-of: kmm
    control-plane: webhook-server
  name: kmm-operator-webhook
  namespace: kmm-operator-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: kmm
      app.kubernetes.io/name: kmm
      app.kubernetes.io/part-of: kmm
      control-plane: webhook-server
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: webhook-server
      labels:
        app.kubernetes.io/component: kmm
        app.kubernetes.io/name: kmm
        app.kubernetes.io/part-of: kmm
        control-plane: webhook-server
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: Exists
            weight: 1
          - preference:
              matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: Exists
            weight: 1
      containers:
      - args:
        - --config=kmm-operator-manager-config
        - --enable-module
        - --enable-namespace
        - --enable-preflightvalidation
        image: gcr.io/k8s-staging-kmm/kernel-module-management-webhook-server:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: webhook-server
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 384Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: kmm-operator-controller
      terminationGracePeriodSeconds: 10
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Equal
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Equal
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: kmm-operator-webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kmm-operator-system/kmm-operator-serving-cert
  labels:
    app.kubernetes.io/component: kmm
    app.kubernetes.io/name: kmm
    app.kubernetes.io/part-of: kmm
  name: kmm-operator-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kmm-operator-webhook-service
      namespace: kmm-operator-system
      path: /validate--v1-namespace
  failurePolicy: Fail
  name: namespace-deletion.kmm.sigs.k8s.io
  namespaceSelector:
    matchLabels:
      kmm.node.k8s.io/contains-modules: ""
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - DELETE
    resources:
    - namespaces
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kmm-operator-webhook-service
      namespace: kmm-operator-system
      path: /validate-kmm-sigs-x-k8s-io-v1beta1-module
  failurePolicy: Fail
  name: vmodule.kb.io
  rules:
  - apiGroups:
    - kmm.sigs.x-k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - modules
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: kmm-operator-webhook-service
      namespace: kmm-operator-system
      path: /validate-kmm-sigs-x-k8s-io-v1beta2-preflightvalidation
  failurePolicy: Fail
  name: vpreflightvalidation.kb.io
  rules:
  - apiGroups:
    - kmm.sigs.x-k8s.io
    apiVersions:
    - v1beta2
    operations:
    - CREATE
    - UPDATE
    resources:
    - preflightvalidations
  sideEffects: None
